// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`.toPartiallyContain > .not.toPartiallyContain > fails when a string does have a given substring 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toPartiallyContain([22m[32mexpected[39m[2m)[22m

Expected array not to partially contain:
  [32mObject {
  \\"baz\\": \\"qux\\",
  \\"foo\\": \\"bar\\",
}[39m
Received:
  [31mArray [
  Object {
    \\"bax\\": \\"zax\\",
    \\"baz\\": \\"qux\\",
    \\"foo\\": \\"bar\\",
  },
][39m"
`;

exports[`.toPartiallyContain > fails when a string does not have a given substring 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toPartiallyContain([22m[32mexpected[39m[2m)[22m

Expected array to partially contain:
  [32mObject {
  \\"baz\\": \\"qux\\",
  \\"foo\\": \\"bar\\",
}[39m
Received:
  [31mArray [
  Object {
    \\"a\\": 1,
    \\"b\\": 2,
  },
][39m"
`;
